--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "@notionhq/client": "^1.0.1",
         "cli-progress": "^3.10.0",
         "clipboardy": "^3.0.0",
-        "dotenv": "^16.0.0",
-        "ntqdm": "^1.0.0"
+        "dotenv": "^16.0.0"
     }
 }
